fix(search-field): add visible border in contrast mode

--- a/packages/components/src/search-field/SearchField.module.css
+++ b/packages/components/src/search-field/SearchField.module.css
@@ -61,6 +61,10 @@
   padding: var(--midas-size-70) 0 var(--midas-size-70) var(--midas-size-150);
   border-bottom: 1px solid var(--midas-border-color-primary);
 
+  @media (forced-colors: active) {
+    border: 1px solid;
+  }
+
   &.medium {
     height: var(--midas-size-130);
     padding: var(--midas-size-50) 0 var(--midas-size-50) var(--midas-size-150);
@@ -81,6 +85,10 @@
 
   &[data-disabled] {
     pointer-events: none;
+
+    @media (forced-colors: active) {
+      border: 1px solid;
+    }
   }
 
   &::-webkit-search-decoration,
